ui-deployment/ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host:
    http:
      paths:
      - path: /deposition(/|$)(.*)
        backend:
          serviceName: gwas-deposition-ui
          servicePort: 80
